--- a/estilo.css
+++ b/estilo.css
@@ -1,6 +1,18 @@
 body {
     background: #d2d2c1 url('imagens/fundo.png');
-    font: 19px arial, helvetica, sans-serif;
+    font: 18px arial, helvetica, sans-serif;
+}
+
+a {
+    color: #4b566a;
+    text-decoration: none;
+    font-weight: bold;
+    padding: 0px;
+}
+
+h2 {
+    color: #828271;
+    font-size: 1.2em;
 }
 
 #capa {
@@ -12,12 +24,6 @@ body {
     background: #c5c5b2;
     padding: 20px
 }
-a {
-    color: #4b566a;
-    text-decoration: none;
-    font-weight: bold;
-    padding: 0px;
-}
 
 #conteudo {
     background: #e8e8d9;
@@ -25,11 +31,11 @@ a {
     
 }
 
-#direitos {
-    padding: center;
+#centralizar {
+    text-align: center;
 }
 
-.centralizar {
-    text-align: center;
+.img-campanha {
+    border: 10px solid #c3c3ae;
 }
 
